qtdemux: update segment when new duration is found

Otherwise the old segment will have a shorter stop time and would
cause the stream to end too early.

https://bugzilla.gnome.org/show_bug.cgi?id=765805